--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,16 +13,26 @@
     {
      "name": "stdout",
      "text": [
-      "si Douleur = \"Abdomen\" et Vomissements = Faux alors Appendicite = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Faux \n-------\n Appendicite = Vrai\n*******\nsi Douleur = \"Abdomen\" et Vomissements = Vrai alors Intoxication alimentaire = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Vrai \n-------\n Intoxication alimentaire = Vrai\n*******\nsi Douleur = \"Abdomen\" et Sexe = \"Femme\" alors DysmÃ©norrhÃ©e = Vrai\n\n Douleur = \"Abdomen\" \n Sexe = \"Femme\" \n-------\n DysmÃ©norrhÃ©e = Vrai\n*******\nsi Douleur = \"Gorge\" et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Gorge\" \n FiÃ¨vre = Vrai \n-------\n Rhume = Vrai\n*******\nsi Douleur = \"Poitrine\" alors Infarctus = Vrai\n\n Douleur = \"Poitrine\" \n-------\n Infarctus = Vrai\n*******\nsi Douleur = \"Gorge\" et FiÃ¨vre = Faux alors Mal de gorge = Vrai\n\n Douleur = \"Gorge\" \n FiÃ¨vre = Faux \n-------\n Mal de gorge = Vrai\n*******\nsi Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Vrai \n-------\n Rhume = Vrai\n*******\nsi Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Faux alors Refroidissement = Vrai\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Faux \n-------\n Refroidissement = Vrai\n*******\nListe des conditions [' Douleur = \"Abdomen\" ', ' Vomissements = Faux ', ' Douleur = \"Abdomen\" ', ' Vomissements = Vrai ', ' Douleur = \"Abdomen\" ', ' Sexe = \"Femme\" ', ' Douleur = \"Gorge\" ', ' FiÃ¨vre = Vrai ', ' Douleur = \"Poitrine\" ', ' Douleur = \"Gorge\" ', ' FiÃ¨vre = Faux ', ' Douleur = \"Aucun\" ', ' Toux = Vrai ', ' FiÃ¨vre = Vrai ', ' Douleur = \"Aucun\" ', ' Toux = Vrai ', ' FiÃ¨vre = Faux ']\nListe des conclusions [' Appendicite = Vrai', ' Intoxication alimentaire = Vrai', ' DysmÃ©norrhÃ©e = Vrai', ' Rhume = Vrai', ' Infarctus = Vrai', ' Mal de gorge = Vrai', ' Rhume = Vrai', ' Refroidissement = Vrai']\n"
+      "si Douleur = \"Abdomen\" et Vomissements = Faux alors Appendicite = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Faux \n------->>>>\n Appendicite = Vrai\n**************************\nsi Douleur = \"Abdomen\" et Vomissements = Vrai alors Intoxication alimentaire = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Vrai \n------->>>>\n Intoxication alimentaire = Vrai\n**************************\nsi Douleur = \"Abdomen\" et Sexe = \"Femme\" alors DysmÃ©norrhÃ©e = Vrai\n\n Douleur = \"Abdomen\" \n Sexe = \"Femme\" \n------->>>>\n DysmÃ©norrhÃ©e = Vrai\n**************************\nsi Douleur = \"Gorge\" et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Gorge\" \ntrouve XXXXXXXXXXXXXXXX\n FiÃ¨vre = Vrai \n------->>>>\n Rhume = Vrai\n**************************\nsi Douleur = \"Poitrine\" alors Infarctus = Vrai\n\n Douleur = \"Poitrine\" \n------->>>>\n Infarctus = Vrai\n**************************\nsi Douleur = \"Gorge\" et FiÃ¨vre = Faux alors Mal de gorge = Vrai\n\n Douleur = \"Gorge\" \ntrouve XXXXXXXXXXXXXXXX\n FiÃ¨vre = Faux \n------->>>>\n Mal de gorge = Vrai\n**************************\nsi Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Vrai \n------->>>>\n Rhume = Vrai\n**************************\nsi Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Faux alors Refroidissement = Vrai\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Faux \n------->>>>\n Refroidissement = Vrai\n**************************\n[<__main__.Regle object at 0x0000021410DAB288>, <__main__.Regle object at 0x0000021410D7D988>, <__main__.Regle object at 0x0000021410DABF08>, <__main__.Regle object at 0x0000021410DAB848>, <__main__.Regle object at 0x0000021410DABC48>, <__main__.Regle object at 0x0000021410DABE88>, <__main__.Regle object at 0x0000021410DAB208>, <__main__.Regle object at 0x0000021410D9F408>]\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
+    "\n",
+    "class Regle:\n",
+    "    conditions=[]\n",
+    "    conclusion=[]        \n",
+    "    def __init__(self):\n",
+    "        self.conditions=[]\n",
+    "        self.conclusion=[]\n",
+    "        \n",
+    "    \n",
+    "    \n",
     "f= open(\"maladies/regles.txt\",\"r\")\n",
     "conclusion=[]\n",
     "conditions=[]\n",
-    "\n",
+    "Regles=[]\n",
     "f1=f.readlines()\n",
     "\n",
     "\n",
@@ -30,20 +40,32 @@
     "     print(line)\n",
     "     x = line.split('alors',1)[0].split('et')\n",
     "     x[0]=x[0].split('si',1)[1]\n",
+    "     \n",
+    "     R= Regle()\n",
     "     for condition in x:\n",
+    "        \n",
     "         print(condition)\n",
-    "         conditions.append(condition)\n",
-    "     print('-------')\n",
+    "         R.conditions.append(condition)\n",
+    "         if (condition.find('Douleur = \"Gorge\"')>0):\n",
+    "             print('trouve XXXXXXXXXXXXXXXX')\n",
+    "     print('------->>>>')\n",
     "     \n",
     "     y= line.split('alors',1)[1].split('\\n',1)[0]\n",
     "     print(y)\n",
-    "     conclusion.append(y)\n",
-    "     print('*******')\n",
-    "print('Liste des conditions',conditions)\n",
-    "print('Liste des conclusions',conclusion)\n",
-    "class Regle:\n",
-    "    conditions=[]\n",
-    "    conclusion=[]\n",
+    "     #conclusion.append(y)\n",
+    "     R.conclusion.append(y)\n",
+    "\n",
+    "     print('**************************')\n",
+    "     \n",
+    "     Regles.append(R)\n",
+    "     \n",
+    "     \n",
+    "print(Regles)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "        \n",
     "\n"
    ]
   }
