extraction des donnés2

--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "si Douleur = \"Abdomen\" et Vomissements = Faux alors Appendicite = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Faux \n------->>>>\n Appendicite = Vrai\n**************************\nsi Douleur = \"Abdomen\" et Vomissements = Vrai alors Intoxication alimentaire = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Vrai \n------->>>>\n Intoxication alimentaire = Vrai\n**************************\nsi Douleur = \"Abdomen\" et Sexe = \"Femme\" alors DysmÃ©norrhÃ©e = Vrai\n\n Douleur = \"Abdomen\" \n Sexe = \"Femme\" \n------->>>>\n DysmÃ©norrhÃ©e = Vrai\n**************************\nsi Douleur = \"Gorge\" et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Gorge\" \ntrouve XXXXXXXXXXXXXXXX\n FiÃ¨vre = Vrai \n------->>>>\n Rhume = Vrai\n**************************\nsi Douleur = \"Poitrine\" alors Infarctus = Vrai\n\n Douleur = \"Poitrine\" \n------->>>>\n Infarctus = Vrai\n**************************\nsi Douleur = \"Gorge\" et FiÃ¨vre = Faux alors Mal de gorge = Vrai\n\n Douleur = \"Gorge\" \ntrouve XXXXXXXXXXXXXXXX\n FiÃ¨vre = Faux \n------->>>>\n Mal de gorge = Vrai\n**************************\nsi Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Vrai \n------->>>>\n Rhume = Vrai\n**************************\nsi Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Faux alors Refroidissement = Vrai\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Faux \n------->>>>\n Refroidissement = Vrai\n**************************\n[<__main__.Regle object at 0x0000021410DAB288>, <__main__.Regle object at 0x0000021410D7D988>, <__main__.Regle object at 0x0000021410DABF08>, <__main__.Regle object at 0x0000021410DAB848>, <__main__.Regle object at 0x0000021410DABC48>, <__main__.Regle object at 0x0000021410DABE88>, <__main__.Regle object at 0x0000021410DAB208>, <__main__.Regle object at 0x0000021410D9F408>]\n"
+      "-- si Douleur = \"Abdomen\" et Vomissements = Faux alors Appendicite = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Faux \n------->>>>\n Appendicite = Vrai\n**************************\n-- si Douleur = \"Abdomen\" et Vomissements = Vrai alors Intoxication alimentaire = Vrai\n\n Douleur = \"Abdomen\" \n Vomissements = Vrai \n------->>>>\n Intoxication alimentaire = Vrai\n**************************\n-- si Douleur = \"Abdomen\" et Sexe = \"Femme\" alors DysmÃ©norrhÃ©e = Vrai\n\n Douleur = \"Abdomen\" \n Sexe = \"Femme\" \n------->>>>\n DysmÃ©norrhÃ©e = Vrai\n**************************\n-- si Douleur = \"Gorge\" et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Gorge\" \n FiÃ¨vre = Vrai \n------->>>>\n Rhume = Vrai\n**************************\n-- si Douleur = \"Poitrine\" alors Infarctus = Vrai\n\n Douleur = \"Poitrine\" \n------->>>>\n Infarctus = Vrai\n**************************\n-- si Douleur = \"Gorge\" et FiÃ¨vre = Faux alors Mal de gorge = Vrai\n\n Douleur = \"Gorge\" \n FiÃ¨vre = Faux \n------->>>>\n Mal de gorge = Vrai\n**************************\n-- si Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Vrai alors Rhume = Vrai\n\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Vrai \n------->>>>\n Rhume = Vrai\n**************************\n-- si Douleur = \"Aucun\" et Toux = Vrai et FiÃ¨vre = Faux alors Refroidissement = Vrai\n Douleur = \"Aucun\" \n Toux = Vrai \n FiÃ¨vre = Faux \n------->>>>\n Refroidissement = Vrai\n**************************\n[<__main__.Regle object at 0x00000255A1399C48>, <__main__.Regle object at 0x00000255A1399788>, <__main__.Regle object at 0x00000255A136C588>, <__main__.Regle object at 0x00000255A1390408>, <__main__.Regle object at 0x00000255A1390048>, <__main__.Regle object at 0x00000255A1390148>, <__main__.Regle object at 0x00000255A1390388>, <__main__.Regle object at 0x00000255A1390D88>]\n"
      ],
      "output_type": "stream"
     }
@@ -21,33 +21,37 @@
    "source": [
     "\n",
     "class Regle:\n",
-    "    conditions=[]\n",
+    "    premises=[]\n",
     "    conclusion=[]        \n",
     "    def __init__(self):\n",
-    "        self.conditions=[]\n",
+    "        self.premises=[]\n",
     "        self.conclusion=[]\n",
     "        \n",
     "    \n",
     "    \n",
     "f= open(\"maladies/regles.txt\",\"r\")\n",
     "conclusion=[]\n",
-    "conditions=[]\n",
+    "premises=[]\n",
     "Regles=[]\n",
     "f1=f.readlines()\n",
     "\n",
     "\n",
     "for line in f1:\n",
-    "     print(line)\n",
+    "     print('--',line)\n",
     "     x = line.split('alors',1)[0].split('et')\n",
     "     x[0]=x[0].split('si',1)[1]\n",
     "     \n",
     "     R= Regle()\n",
-    "     for condition in x:\n",
+    "     for premise in x:\n",
     "        \n",
-    "         print(condition)\n",
-    "         R.conditions.append(condition)\n",
-    "         if (condition.find('Douleur = \"Gorge\"')>0):\n",
-    "             print('trouve XXXXXXXXXXXXXXXX')\n",
+    "         print(premise)\n",
+    "         R.premises.append(premise)\n",
+    "        \n",
+    "         #exemple de recherche\n",
+    "         #if (premise.find('Douleur = \"Gorge\"')>0):\n",
+    "          #   print('trouve XXXXXXXXXXXXXXXX')\n",
+    "             \n",
+    "             \n",
     "     print('------->>>>')\n",
     "     \n",
     "     y= line.split('alors',1)[1].split('\\n',1)[0]\n",
